# shippable

./: .gitignore  AGENTS.md  IDEA.md  README.md  idea.md  package.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  init-firewall.sh  setup.sh
docs/: RELEASE.md  ROADMAP.md  ai-plan.md  architecture.md  demo.md  lsp-setup.md  overview.md  plan-php-lsp-browser.md  plan-symbols.md  usability-test.md
docs/concepts/: agent-context.md  ai-annotations.md  changeset-hierarchy.md  code-runner-model.md  desktop-shell-and-sidecar.md  diff-ingestion.md  evidence-model.md  fixture-catalog-and-demo.md  local-session-persistence.md  lsp.md  prompt-library.md  prompt-system.md  review-plan-model.md  review-state.md  server-api-boundary.md  symbol-graph-and-entry-points.md  theme-token-system.md  view-model-layer.md
docs/features/: agent-context-panel.md  ai-inspector.md  anchored-comments.md  api-key-setup.md  (+23 more)
landing/: index.html
mcp-server/: README.md  package-lock.json  package.json  tsconfig.json
scripts/: build-dmg.mjs  release.mjs
sdd/: sdd.config.md
server/: .gitignore  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.e2e.config.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: keychain.rs  lib.rs  menu.rs
tools/: shippable-agent-hook  shippable-inbox-hook
web/: .gitignore  demo.html  eslint.config.js  feature-docs.html  gallery.html  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.e2e.json  vite.config.ts
(+378 files in other folders)
